# pyocutil

./: LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: build.yml
config/: project.py  python.py
doc/: TODO.txt
pyocutil/: configs.py  main.py  static.py  utils.py
src/pyocutil/: main.py  static.py  utils.py
templates/: setup.py.mako
