[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyocutil"
version = "0.0.2"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "utilities for openshift"
readme = "README.md"
license = "MIT"
keywords=[
    "oc",
    "openshift",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytconf",
    "pylogconf",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pyocutil"
"Bug Tracker" = "https://github.com/veltzer/pyocutil/issues"
"Documentation" = "https://veltzer.github.io/pyocutil"
"Download" = "https://pypi.org/project/pyocutil/"
"Repository" = "https://github.com/veltzer/pyocutil"

[project.scripts]
pyocutil = "pyocutil.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyocutil"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyocutil/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
